tests/fixtures/files/syntax_errors/synerr_without_error.tmp
*** NEW WARNINGS/ERRORS GENERATED BY THE LOG FILE ***
*** ORIGINAL WARNINGS/ERRORS LIST ***
orichk.tmp   OPN5_MOUSE      Q6VZZ7      RP/FT - WARNING: FT VAR_SEQ, but at least one sequence/alternative splicing reference does not mention 'ISOFORM'
